--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,10 @@
 [phases.setup]
-nixPkgs = ["nodejs", "python39"]
+nixPkgs = ["nodejs", "python39", "python39Packages.pip"]
 
 [phases.install]
 cmds = [
   "cd frontend && npm ci",
-  "cd backend && pip install -r requirements.txt"
+  "cd backend && python3 -m pip install -r requirements.txt"
 ]
 
 [phases.build]  
