--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ nixPkgs = ["nodejs", "python39Full"]
 [phases.install]
 cmds = [
   "cd frontend && npm ci",
-  "cd backend && pip install -r requirements.txt"
+  "cd backend && python -m pip install -r requirements.txt"
 ]
 
 [phases.build]  
