--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ nixPkgs = ["nodejs", "python39", "python39Packages.pip"]
 [phases.install]
 cmds = [
   "cd frontend && npm ci",
-  "cd backend && python -m pip install --user -r requirements.txt"
+  "cd backend && python -m ensurepip --upgrade && python -m pip install -r requirements.txt"
 ]
 
 [phases.build]  
