--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,10 @@
 [phases.setup]
-nixPkgs = ["nodejs", "python39", "python39Packages.pip"]
+nixPkgs = ["nodejs", "python39", "gcc"]
 
 [phases.install]
 cmds = [
   "cd frontend && npm ci",
-  "cd backend && python -m ensurepip --upgrade && python -m pip install -r requirements.txt"
+  "cd backend && pip install -r requirements.txt"
 ]
 
 [phases.build]  
@@ -15,4 +15,4 @@ cmd = "cd backend && python app.py"
 
 [variables]
 NODE_ENV = "production"
-PYTHON_VERSION = "3.9"
+NIXPACKS_PYTHON_VERSION = "3.9"
