Ready for Railway deployment - Node.js migration complete

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,15 @@
-# Configurações de Desenvolvimento
-DATABASE_URL=sqlite:///agenda_facil.db
-JWT_SECRET_KEY=sua-chave-secreta-muito-segura
-FLASK_ENV=development
+# Configurações do banco de dados
+DATABASE_PATH=./instance/agenda_facil.db
+
+# JWT
+JWT_SECRET_KEY=sua-chave-secreta-muito-segura-para-desenvolvimento
+JWT_EXPIRES_IN=1d
+
+# Ambiente
+NODE_ENV=development
+
+# CORS (para produção, separar URLs por vírgula)
 CORS_ORIGINS=http://localhost:3000
 
-# Configurações de Produção (Railway)
-# DATABASE_URL=postgresql://username:password@hostname:port/database
-# JWT_SECRET_KEY=your-production-secret-key
-# FLASK_ENV=production
-# CORS_ORIGINS=https://your-app-name.railway.app
+# Porta do servidor
+PORT=5000
