--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "agenda-facil",
   "version": "1.0.0",
   "description": "Sistema completo de gerenciamento de compromissos e tarefas",
-  "main": "backend/app.py",
+  "main": "backend/server.js",
   "scripts": {
-    "build": "cd frontend && npm ci && CI=false npm run build",
-    "start": "cd backend && python app.py",
-    "install-deps": "cd frontend && npm ci && cd ../backend && pip install -r requirements.txt"
+    "build": "cd backend && npm install",
+    "start": "cd backend && npm start",
+    "dev": "cd backend && npm run dev",
+    "init-db": "cd backend && npm run init-db",
+    "install-deps": "cd backend && npm install"
   },
   "keywords": [
     "agenda",
     "calendar",
     "tasks",
     "react",
-    "flask",
+    "nodejs",
+    "express",
+    "sqlite",
     "railway"
   ],
   "author": "AgendaFácil Team",
   "license": "MIT",
   "engines": {
-    "node": ">=16.x",
-    "python": ">=3.8"
+    "node": ">=16.x"
   }
 }
