Fix Railway deploy error - Remove cd commands from config files

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,9 @@ nixPkgs = ["nodejs", "npm"]
 
 [phases.install]
 dependsOn = ["setup"]
-cmds = ["cd backend && npm install"]
+cmds = ["npm install"]
+workDir = "backend"
 
 [start]
-cmd = "cd backend && node server.js"
+cmd = "node server.js"
+workDir = "backend"
