--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,6 +11,14 @@ dependsOn = ["install"]
 cmds = ["node initDb.js"]
 workDir = "backend"
 
+[variables]
+NODE_ENV = "production"
+JWT_SECRET_KEY = "sua-chave-secreta-muito-segura-para-producao-railway-2024"
+JWT_EXPIRES_IN = "1d"
+CORS_ORIGINS = "https://agendafacil-production-49bf.up.railway.app"
+PORT = "5000"
+DATABASE_PATH = "./instance/agenda_facil.db"
+
 [start]
 cmd = "node server.js"
 workDir = "backend"
